--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,34 @@ body {
   color: #2a4a5c;
 }
 
+.body__check {
+  margin-left: 23px;
+}
+
+.body__wrap-btn {
+  width: 246px;
+  height: 42px;
+  margin-left: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.body__btn {
+  width: 100%;
+  height: 100%;
+  background-color: #3698fb;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0.25px;
+  padding-left: 1.5px;
+}
+
 .button-row__facebook-btn {
   height: 42px;
   width: 246px;
@@ -404,4 +432,43 @@ body {
   font-size: 13px;
   line-height: 130%;
   letter-spacing: 0.18px;
+}
+
+.check {
+  margin-bottom: 61px;
+}
+
+.check__label {
+  color: #2a4a5c;
+  letter-spacing: -0.35px;
+}
+
+.check__input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.check__input:checked + .check__box {
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='11' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 11'%3E%3Cpath fill='%23F69400' d='M6.226 7.7L2.252 3.5.927 4.9l5.3 5.6 8.99-9.5-1.42-1-7.57 7.7z'/%3E%3C/svg%3E");
+}
+
+.check__input:focus + .check__box {
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 2.5px #afafaf;
+          box-shadow: 0 0 0 1px #fff, 0 0 0 2.5px #afafaf;
+}
+
+.check__box {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  border: 1px solid #afafaf;
+  border-radius: 2px;
+  margin-left: -21px;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
 }
