--- a/scss/style.scss
+++ b/scss/style.scss
@@ -128,12 +128,27 @@ body {
   }
 
   &__check {
+    margin-left: 23px;
   }
 
   &__wrap-btn {
+    width: 246px;
+    height: 42px;
+    margin-left: 2px;
+    display: flex;
+    justify-content: center;
   }
 
   &__btn {
+    width: 100%;
+    height: 100%;
+    background-color: #3698fb;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0.25px;
+    padding-left: 1.5px;
   }
 }
 .button-row {
@@ -329,14 +344,40 @@ body {
 }
 .check {
   &__label {
+    color: #2a4a5c;
+    letter-spacing: -0.35px;
   }
 
   &__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+
+    &:checked + .check__box {
+      background-image: url("data:image/svg+xml,%3Csvg width='16' height='11' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 11'%3E%3Cpath fill='%23F69400' d='M6.226 7.7L2.252 3.5.927 4.9l5.3 5.6 8.99-9.5-1.42-1-7.57 7.7z'/%3E%3C/svg%3E");
+    }
+    &:focus + .check__box {
+      box-shadow: 0 0 0 1px #fff, 0 0 0 2.5px #afafaf;
+    }
   }
 
   &__box {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #afafaf;
+    border-radius: 2px;
+    margin-left: -21px;
+
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
   }
 
   &__link {
   }
+  margin-bottom: 61px;
 }
