--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
+// * focus-visible
+
 // * ===== fonts ===== * //
 
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500&display=swap");
+@import "_fonts";
+// @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500&display=swap");
 
 @import "_nullstyles";
 
@@ -12,27 +15,30 @@ body {
   overflow: hidden;
   background-color: #eff6ff;
 }
-.container {
-  max-width: 1440px;
-  margin: 0px auto;
-  padding: 100px 80px;
-  box-sizing: content-box;
-  background-color: #fefefe;
-}
+// .container {
+//   margin: 0px auto;
+// }
 .page {
 }
 
 .registration {
   &__form {
+    position: fixed;
+    z-index: 500;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1440px;
+    background-color: #fefefe;
   }
 }
 .form {
   &__row {
     display: flex;
-    position: relative;
   }
 
   &__image {
+    position: relative;
   }
 
   &__logo {
@@ -85,13 +91,15 @@ body {
     letter-spacing: 0.45px;
   }
   &__or-text::before {
-    position: absolute;
     content: "";
+
+    position: absolute;
+    top: 6px;
+    left: 140px;
+
     height: 1px;
     width: 108px;
     background-color: #2a4a5c;
-    top: 6px;
-    left: 140px;
   }
   &__or-text::after {
     position: absolute;
@@ -110,8 +118,9 @@ body {
   &__title {
     font-size: 22px;
     font-weight: 500;
-    letter-spacing: -0.3px;
+    letter-spacing: -0.25px;
     margin-bottom: 16px;
+    margin-left: -1.5px;
     color: #2a4a5c;
   }
 
@@ -122,6 +131,9 @@ body {
   }
 
   &__radio-row {
+    display: flex;
+    margin-left: 30px;
+    margin-bottom: 28px;
   }
 
   &__pop {
@@ -135,11 +147,10 @@ body {
     width: 246px;
     height: 42px;
     margin-left: 2px;
-    display: flex;
-    justify-content: center;
   }
 
   &__btn {
+    // TODO: hover + focus
     width: 100%;
     height: 100%;
     background-color: #3698fb;
@@ -172,7 +183,9 @@ body {
     position: absolute;
     top: 11px;
     left: 10px;
+
     width: 20px;
+    height: 20px;
   }
 
   &__facebook-text {
@@ -208,32 +221,40 @@ body {
 .input-row {
   display: flex;
 
+  // FIXME: class -> wrap-email
+  // TODO: порядок
   &__email {
     position: relative;
     margin-left: 2px;
+
     width: 246px;
     height: 57px;
     border-top: 1px solid #afafaf;
     border-right: 1px solid #afafaf;
     border-bottom: 1px solid #afafaf;
     border-left: 2px solid blue;
-    padding: 24px 0 0 8px;
+    // padding: 24px 0 0 8px;
     border-radius: 0 5px 0 0;
     margin-right: 36px;
+
+    // FIXME: class -> email
     input {
       font-size: 17px;
       letter-spacing: -0.15px;
-      width: 230px;
+      // width: 230px;
+      width: 100%;
+      padding: 24px 0 0 8px;
       color: #2a4a5c;
-      // background-color: gold;
+      background-color: gold;
     }
   }
   &__e-text {
     position: absolute;
-    color: #2a4a5c;
-    font-size: 14px;
     top: 5px;
     left: 8px;
+
+    color: #2a4a5c;
+    font-size: 14px;
   }
   &__phone {
     position: relative;
@@ -242,6 +263,7 @@ body {
     border: 1px solid #afafaf;
     padding: 24px 0 0 8px;
     border-radius: 0 0 5px 5px;
+    // FIXME: input
     input {
       font-size: 17px;
       letter-spacing: -0.15px;
@@ -258,9 +280,6 @@ body {
   }
 }
 .radio-row {
-  display: flex;
-  margin-left: 30px;
-  margin-bottom: 28px;
   &__label {
     font-size: 16px;
     font-weight: 500;
@@ -308,7 +327,9 @@ body {
     border-radius: 50%;
   }
 
+  // wrapp-i-button
   &__i-button {
+    // FIXME: Разберись со мной :)
     button {
       position: absolute;
       top: 5px;
@@ -371,13 +392,17 @@ body {
     border-radius: 2px;
     margin-left: -21px;
 
-    background-color: #fff;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: contain;
+    // background-color: #fff;
+    // background-repeat: no-repeat;
+    // background-position: 50% 50%;
+    // background-size: contain;
+
+    background: #fff 50% / contain no-repeat;
   }
 
   &__link {
+    // hover + focus
   }
+  // FIXME: I,m bem block!
   margin-bottom: 61px;
 }
